# optix-rs

./: .gitignore  Cargo.toml  README.md  build.rs  optix_bindgen.h
cu/: Cargo.toml  build.rs  cuda_wrapper.rs
cu/examples/: add.rs
cu/src/: allocator.rs  buffer.rs  context.rs  cuda_wrapper.h  device.rs  error.rs  event.rs  execution.rs  lib.rs  memory.rs  module.rs  stream.rs  sys.rs  texture.rs
cu/src/cuda/: add.cu
cuda/: CMakeLists.txt  FindCUDA.cmake  FindOptiX.cmake  attr.cu  bsdf_diffuse.cu  bsdf_microfacet.cu  bsdfs.cuh  cam_ortho.cu  cam_screen.cu  draw_color.cu  exception.cu  light_infinite_area.cu  light_quad.cu  lights.cuh  material.cu  mtl_constant.cu  mtl_normal.cu  optixPathTracer.cu  optixPathTracer.h  parallelogram.cu  pathtracer.cu  pathtracer_rtx.cu  pt_cam.cu  ptx.cmake  random.cuh  raydata.cuh  sampler.cuh  shader_globals.cuh  shaders.cu  shading_frame.cuh  surface.cu  triangle_mesh.cu
examples/pathtracer/: gl_util.rs  main.rs
examples/pathtracer_rtx/: gl_util.rs  main.rs
optix/: Cargo.toml  build.rs  optix_wrapper.rs
optix-derive/: Cargo.toml
optix-derive/src/: lib.rs
optix-sys/: Cargo.toml  build.rs  cuda_wrapper.rs  optix_wrapper.rs
optix-sys/examples/02_pipeline/: LaunchParams.h  build.rs  main.rs  sample_renderer.rs
optix-sys/examples/s01_hello/: main.rs
optix-sys/examples/s02_pipeline/: devicePrograms.cu  sample_renderer.rs
optix-sys/optix_stubs-capi/: optix_stubs.c
optix-sys/src/: cuda_sys.rs  cuda_wrapper.h  lib.rs  optix_wrapper.h
optix/examples/01_hello/: main.rs
optix/examples/02_pipeline/: LaunchParams.h  devicePrograms.cu  device_programs.cu  launch_params.h  main.rs  renderer.rs  sample_renderer.rs
optix/examples/03_window/: LaunchParams.h  devicePrograms.cu  device_programs.cu  gl_util.rs  launch_params.h  main.rs  renderer.rs  sample_renderer.rs  vector.rs
optix/examples/04_mesh/: LaunchParams.h  devicePrograms.cu  device_programs.cu  gl_util.rs  launch_params.h  main.rs  renderer.rs  sample_renderer.rs  vector.rs
optix/examples/05_sbtdata/: LaunchParams.h  devicePrograms.cu  launch_params.h  main.rs  renderer.rs  sample_renderer.rs
optix/examples/06_multimesh/: devicePrograms.cu  main.rs  sample_renderer.rs
optix/examples/06_multiple/: device_programs.cu  gl_util.rs  main.rs  renderer.rs
optix/examples/07_obj/: launch_params.h  main.rs  renderer.rs  sample_renderer.rs
optix/examples/08_texture/: LaunchParams.h  devicePrograms.cu  device_programs.cu  gl_util.rs  launch_params.h  main.rs  renderer.rs  sample_renderer.rs
optix/examples/09_shadow/: LaunchParams.h  devicePrograms.cu  device_programs.cu  launch_params.h  main.rs  renderer.rs  sample_renderer.rs
optix/examples/10_softshadow/: LaunchParams.h  devicePrograms.cu  device_programs.cu  gl_util.rs  launch_params.h  main.rs  renderer.rs  sample_renderer.rs  vector.rs
optix/examples/11_denoise/: device_programs.cu  launch_params.h  main.rs  renderer.rs
optix/examples/common/: lcg.h  types.h  vec.h
optix/examples/saxpy/: main.rs
optix/examples/saxpy_sys/: main.rs
optix/optix_stubs-capi/: CMakeLists.txt
optix/src/: acceleration.rs  buffer.rs  denoiser.rs  device_context.rs  error.rs  image.rs  instance.rs  lib.rs  math.rs  module.rs  optix_wrapper.h  pipeline.rs  program_group.rs  shader_binding_table.rs  sys.rs  texture.rs
optix/src/acceleration/: instance_array.rs  mod.rs  triangle_array.rs
optix/src/cuda/: allocator.rs  array.rs  buffer.rs  context.rs  cu.rs  error.rs  mod.rs  nvrtc.rs  stream.rs  texture_object.rs
optix/src/math/: mod.rs  types_almath.rs  types_cgmath.rs  types_nalgebra_glm.rs
src/: context.rs  cuda.rs  cuda_bindings.rs  error.rs  ginallocator.rs  lib.rs  math.rs  nvrtc.rs  nvrtc_bindings.rs  optix5_bindings.rs  optix6_bindings.rs  optix_bindings.rs  search_path.rs
src/context/: acceleration.rs  buffer.rs  geometry.rs  geometry_group.rs  geometry_instance.rs  geometry_triangles.rs  group.rs  material.rs  program.rs  texture_sampler.rs  transform.rs  variable.rs
