[package]
name = "cu"
version = "0.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.55.1"

[dependencies]
thiserror = "1.0.20"
num-traits = "0.2.12"
enum-primitive-derive = "0.2.1"
bitflags = "1.2.1"
parking_lot = "0.11.0"
