[package]
name = "optix-sys"
version = "0.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
nalgebra-glm = "0.4.0"

[build-dependencies]
bindgen = "0.51.0"
cmake = "0.1.41"

[dependencies]
derive_more = "0.15.0"
