[package]
name = "optix"
version = "0.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optix-sys = {path="../optix-sys"}
bitflags = "1.1.0"
gl = "0.13.0"
imath = {path="../../imath-rs", optional=true}
cfg-if = "0.1.10"
nalgebra-glm = {version = "0.5.0", optional=true}
nalgebra = {version = "0.19.0", optional=true}
log = "0.4.8"
thiserror = "1.0"
bitfield = "0.13.2"

[dev-dependencies]
optix-derive = {path="../optix-derive"}
glfw = "0.32.0"
tobj = "0.1.10"
image = "0.22.2"
enum_primitive = "0.1.1"
num = "0.2.0"

[features]
default=["math-nalgebra"]
math-imath = ["imath"]
math-nalgebra = ["nalgebra-glm", "nalgebra"]

