[package]
name = "optix"
version = "0.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cu = { path = "../cu" }
num-traits = "0.2.12"
enum-primitive-derive = "0.2.1"
bitflags = "1.2.1"
thiserror = "1.0.20"
ustr = "0.7.0"

[dev-dependencies]
glfw = "0.32.0"
gl = "0.14.0"
casey = "0.3.0"
parking_lot = "0.11.0"
once_cell = "1.4.1"

[build-dependencies]
bindgen = "0.55.1"
cmake = "0.1.44"
