[package]
name = "optix"
version = "0.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optix-sys = {path="../optix-sys"}
bitflags = "1.3.2"
gl = "0.14.0"
imath = {version = "0.1.0", optional=true}
cfg-if = "1.0.0"
nalgebra-glm = {version = "0.16.0", optional=true} # features=["cuda"],
nalgebra = {version = "0.30.1", optional=true}
#ultraviolet = {version = "0.9.0", optional=true}
log = "0.4.14"
thiserror = "1.0"
bitfield = "0.13.2"
ustr = "0.8.1"

[dev-dependencies]
optix-derive = {path="../optix-derive"}
glfw = "0.44.0"
tobj = "3.2.0"
image = "0.24.1"
enum_primitive = "0.1.1"
num = "0.4.0"

[features]
default=["math-nalgebra"]
math-imath = ["imath"]
math-nalgebra = ["nalgebra-glm", "nalgebra"]

